# oneone-plz

./: .gitignore  Cargo.toml  README.md  session.vim
.github/workflows/: check.yml  publish.yaml  publish.yml
just-scripts/: commit-msg
src/: error.rs  lib.rs  state.rs
src/convert/: chunked.rs  content_length.rs  decompress.rs  mod.rs
src/convert/decompress/: error.rs  mod.rs
src/oneone/: impl_decompress.rs  impl_try_from_bytes.rs  impl_try_from_state.rs  mod.rs  request.rs  response.rs
src/oneone/update/: mod.rs  request.rs  response.rs
src/read/: error.rs  mod.rs
src/state/: impl_try_from.rs  mod.rs
test-utilities/: Cargo.toml
test-utilities/src/: lib.rs
tests/: tests.rs
tests/error_cases/: mod.rs
tests/request/: chunked.rs  content_length.rs  mod.rs  partial.rs  success.rs
tests/request/convert/: chunked.rs  mod.rs
tests/request/oneone/: build.rs  impl_try_from_bytes.rs  impl_try_from_state.rs  mod.rs  update.rs
tests/request/state/: chunked.rs  content_length.rs  mod.rs  no_body.rs  partial.rs
tests/response/: body_close.rs  chunked.rs  content_length.rs  headers.rs  mod.rs  transfer_encoding.rs
tests/response/convert/: content_length.rs  decompress.rs  mod.rs
tests/response/oneone/: build.rs  impl_try_from_bytes.rs  mod.rs  update.rs
tests/response/state/: body_close.rs  chunked.rs  close.rs  content_length.rs  error.rs  headers.rs  mod.rs
tests/response/state/chunked/: complete.rs  compressed.rs  extra.rs  mod.rs  partial.rs
tests/response/state/content_length/: complete.rs  compressed.rs  extra.rs  mod.rs  partial.rs
tests/response/state/content_length/compressed/: basic.rs  error.rs  mod.rs
tests/response/state/content_length/compressed/content_encoding/: complete.rs  extra.rs  mod.rs
tests/response/state/content_length/compressed/content_encoding/complete/: error.rs  mod.rs
tests/response/state/content_length/compressed/content_encoding/extra/: mod.rs
tests/response/state/content_length/compressed/transfer_encoding/: mod.rs
