[package]
name = "oneone-plz"
version = "0.0.9"
authors = ["darkseid", "sytten <emile@caido.io>"]
description = "HTTP/1 parser for the ParsePlz ecosystem"
repository = "https://github.com/parseplz/oneone-plz"
license = "MIT"
edition = "2024"

[dependencies]
# primitives
body-plz = "0.0.48"
buffer-plz = "0.0.3"
decompression-plz = "0.0.25"
header-plz = "0.0.44"
http-plz = "0.0.4"

# basic 
bytes = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
brotli = "8.0.0"
flate2 = "1.1.0"
zstd = "0.13.3"

[lints.clippy]
unwrap_used = "deny"
